# Gatekeeper

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml
agent_demo/: gate_client.py  graph.py  mock_tools.py
agent_demo/scenarios/: scope_creep_demo.py
benchmark/: __main__.py  metrics.py  report.py  runner.py
benchmark/judges/: gatekeeper_judge.py  llm_judge.py
benchmark/results/: cache.json  raw_results.json  report.md
benchmark/scenarios/: clean_cases.py  pii_leak_cases.py  rate_limit_cases.py  schema.py  scope_creep_cases.py
dashboard/: app.py  models.py  requirements-dashboard.txt
dashboard/data/: audit_queries.py  benchmark_loader.py
dashboard/views/: benchmark_view.py  overview.py  review_queue.py  violation_categories.py
policies/: policy_registry.yaml
policies/rego/: argument_bounds.rego  argument_bounds_test.rego  data.json  decision.rego  denylist.rego  denylist_test.rego  pii_detection.rego  pii_detection_test.rego  rate_limit.rego  rate_limit_test.rego  scope_creep.rego  scope_creep_test.rego
scripts/: prune_session_state.py
src/gatekeeper/: config.py  engine.py  main.py
src/gatekeeper/api/: routes.py
src/gatekeeper/audit/: db.py  logger.py
tests/: conftest.py  test_api.py  test_api_stateful.py  test_dashboard_data.py  test_engine.py  test_engine_stateful.py  test_parity.py  test_transactional.py
tests/benchmark/: conftest.py  test_metrics.py  test_smoke.py
tests/test_rules/: test_argument_bounds.py  test_denylist.py  test_pii.py  test_rate_limit.py  test_scope_creep.py
(+13 files in other folders)
